--- a/3.3-worldmap-erstellung.md
+++ b/3.3-worldmap-erstellung.md
@@ -13,22 +13,46 @@ nav_order: 3
 ## Vorbereitung
 
 ### Auswahl des richtigen Spielortes
+- Kein Verkehr
+- Keine Auffahrten
+- Möglichst viel Platz Drumherum; User*in steht nicht im Weg
+- Ort muss öffentlich zugänglich sein
+- Ort, der sich in absehbarer Zeit nicht verändert
+- Mit geeignetem Einstiegspunkt ausgestattet [ LINK zu geeignetem Einstiegspunkt ]
+- Bei direkter Sonneneinstrahlung nicht von kontrastreicher Schattenbildung betroffen
 
 
-### Richtigen Bedingungen für einen Scan
+### Perfekte Bedingungen für einen Scan
+- Trockener Untergrund
+- Idealerweise bewölktes Wetter
 
 
 ## Scan
 ### Positionierung der Objekte
+Die Objekte können innerhalb der Session frei positioniert und rotiert werden. Die Interaktionen dazu sind (hier)[] aufgelistet.
+
 
 ### Einstiegspunkte definieren
 
+Bei der Erstellung einer WorldMap ist es wichtig einen markanten Einstiegspunkt für die Session zu wählen. Dieser Einstiegspunkt zeichnet sich entweder durch eine markante Topologie oder/und eine markante Oberflächenbeschaffenheit aus. Um sicherzugehen, dass dieser Einstiegspunkt auch in der WorldMap entsprechend gespeichert wird, sollte die Session mit dem Scannen dieses Punktes gestartet werden. Ob der Einstiegspunkt funktioniert, kann am Einfachsten getestet werden, indem die Session über "Play Session" direkt gespielt wird. Um eine WorldMap flexibler und für die User*in im Spiel einfacher zu erkennen zu machen, macht es Sinn mehrere Einstiegspunkte in die WorldMap zu integrieren. Dazu beginnt man den erneuten Scanning-Prozess am zusätzlich gewählten Einstiegspunkt und bewegt sich dann zum bereits zuvor angelegten Einstiegspunkt vor. Wird die WorldMap dann am alten Einstiegspunkt erkannt und geladen, befinden sich beide Einstiegspunkte in der WorldMap. Weitere Einstiegspunkte können nach dem gleichen Ablauf hinzugefügt werden. Ab einer bestimmten Größe der WorldMap werden vorherige Einstiegspunkte aber wieder überschrieben. Eine genaue Regel dazu gibt es nicht. Die Funktionsweise der WorldMaps muss daher kontinuierlich getestet werden.
+
+Charakteristiken guter Einstiegspunkte:
+* Markante Topologie
+* Kontrastreiche Oberflächenbeschaffenheit
+
+Charakteristiken schlechter Einstiegspunkte:
+* Kontrastreiche Oberflächen, die vergänglich sind (z.B. Graffiti)
+
 
 ## Export
+Die erstellte WorldMap-Datei kann über die Export-Funktion des Portal Editors [5.3](3.2-app-aufbau.html#worldmap-details) exportiert werden.
 
+Danach muss diese auf Contentful hochgeladen und dem entsprechenden Portal hinzugefügt werden.
 
 ## Erstellung spieltechnischer Zusatzinhalte
 
+
+---
 
 ## Fehlerbehebung
 
@@ -61,14 +85,9 @@ WorldMaps sind die Grundlage einer persistenten AR-Experience. Dabei sind das Po
 
 ## Einstiegspunkte in die Session
 
-Bei der Erstellung einer WorldMap ist es wichtig einen markanten Einstiegspunkt für die Session zu wählen. Dieser Einstiegspunkt zeichnet sich entweder durch eine markante Topologie oder/und eine markante Oberflächenbeschaffenheit aus. Um sicherzugehen, dass dieser Einstiegspunkt auch in der WorldMap entsprechend gespeichert wird, sollte die Session mit dem Scannen dieses Punktes gestartet werden. Ob der Einstiegspunkt funktioniert, kann am Einfachsten getestet werden, indem die Session über "Play Session" direkt gespielt wird. Um eine WorldMap flexibler und für die User*in im Spiel einfacher zu erkennen zu machen, macht es Sinn mehrere Einstiegspunkte in die WorldMap zu integrieren. Dazu beginnt man den erneuten Scanning-Prozess am zusätzlich gewählten Einstiegspunkt und bewegt sich dann zum bereits zuvor angelegten Einstiegspunkt vor. Wird die WorldMap dann am alten Einstiegspunkt erkannt und geladen, befinden sich beide Einstiegspunkte in der WorldMap. Weitere Einstiegspunkte können nach dem gleichen Ablauf hinzugefügt werden. Ab einer bestimmten Größe der WorldMap werden vorherige Einstiegspunkte aber wieder überschrieben. Eine genaue Regel dazu gibt es nicht. Die Funktionsweise der WorldMaps muss daher kontinuierlich getestet werden.
 
-Charakteristiken guter Einstiegspunkte:
-* Markante Topologie
-* Kontrastreiche Oberflächenbeschaffenheit
 
-Charakteristiken schlechter Einstiegspunkte:
-* Kontrastreiche Oberflächen, die vergänglich sind (z.B. Graffiti)
+
 
 
 Da beim Scannen nicht nur die Topologie der Umgebung, sondern auch die Farblichkeit dessen analysiert wird, sind dem Erkennen gespeicherter WorldMaps gewisse Grenzen gesetzt. Je stärker sich die Farbigkeit einer Oberfläche im Vergleich zum Original-Scan verändert hat, desto wahrscheinlicher wird es, dass die WorldMap nicht erkannt wird. Besondere Faktoren, auf die es dabei zu achten gilt, sind die Folgenden:
