--- a/3.2-app-aufbau.md
+++ b/3.2-app-aufbau.md
@@ -31,7 +31,7 @@ Durch Auswahl eines Portals öffnet sich die Portalseite, auf der sich alle rele
 
 Nach Auswahl einer WorldMap werden alle Optionen zur Arbeit mit der WorldMap aufgelistet.
 
-![WorldMap Detail Page](/img/pe_map_1.png) ![WorldMap Detail Page mit Hinweisbild](/img/pe_map_2.png)
+![WorldMap Detail Page](/img/pe_map_1.png) ![WorldMap Detail Page mit Hinweisbild](/img/pe_map_clue_image.png)
 
 Dazu gehören zuerst die Session-Einstellungen:
 * "Show Debugging Options" (4.1) startet die AR-Session in einem Debugging-Modus, bei dem alle in der Session erkannten Flächen und Punktwolken visualisiert werden. So wird der Fortschritt des aktuellen Scanning-Prozesses sowie der genaue Inhalt einer gerade geladenen bzw. erstellten WorldMap transparent gemacht. Der maskierende Effekt des Portals wird dabei entfernt.
@@ -54,7 +54,7 @@ Ist eine WorldMap in einem zufriendenstellenden Zustand, so kann diese über den
 
 ## AR-Session
 
-![Session innerhalb des Portals](/img/pe_session_2_inside.png) ![Session im Debugging-Modus](/img/pe_session_3_debugging.png)
+![Session innerhalb des Portals](/img/pe_session_inside.png) ![Session im Debugging-Modus](/img/pe_session_3_debugging.png)
 
 Sobald die AR-Session startet, wird die ausgewählte WorldMap im Hintergrund geladen und der Scanning-Prozess beginnt. Während des Scannens werden die Topologie und Oberflächenbeschaffenheit der Umgebung analysiert und diese Daten mit den in der WorldMap abgespeicherten Daten abgeglichen. Gibt es eine hinreichende Übereinstimmung, so werden die 3D-Objekte an den in der WorldMap gespeicherten Orten im Raum positioniert.
 
