--- a/3.2-app-aufbau.md
+++ b/3.2-app-aufbau.md
@@ -54,7 +54,7 @@ Ist eine WorldMap in einem zufriendenstellenden Zustand, so kann diese über den
 
 ## AR-Session
 
-![Session innerhalb des Portals](/img/pe_session_inside.png) ![Session im Debugging-Modus](/img/pe_session_3_debugging.png)
+![Session innerhalb des Portals](/img/pe_session_inside.PNG) ![Session im Debugging-Modus](/img/pe_session_3_debugging.png)
 
 Sobald die AR-Session startet, wird die ausgewählte WorldMap im Hintergrund geladen und der Scanning-Prozess beginnt. Während des Scannens werden die Topologie und Oberflächenbeschaffenheit der Umgebung analysiert und diese Daten mit den in der WorldMap abgespeicherten Daten abgeglichen. Gibt es eine hinreichende Übereinstimmung, so werden die 3D-Objekte an den in der WorldMap gespeicherten Orten im Raum positioniert.
 
