--- a/3.3-worldmap-erstellung.md
+++ b/3.3-worldmap-erstellung.md
@@ -13,28 +13,53 @@ nav_order: 3
 ## Vorbereitung
 
 ### Auswahl des richtigen Spielortes
-- Kein Verkehr
-- Keine Auffahrten
-- Möglichst viel Platz Drumherum; User*in steht nicht im Weg
-- Ort muss öffentlich zugänglich sein
-- Ort, der sich in absehbarer Zeit nicht verändert
-- Mit geeignetem Einstiegspunkt ausgestattet [ LINK zu geeignetem Einstiegspunkt ]
-- Bei direkter Sonneneinstrahlung nicht von kontrastreicher Schattenbildung betroffen
+
+Da das Spiel im öffentlichen Raum stattfindet, ist die Auswahl des richtigen Spielortes von besonderer Bedeutung. Dazu gibt es einige Kern-Kriterien:
+
+- Sicherheit der User*in muss bestmöglich gewährleistet sein:
+  - Abseits von Verkehr und Straßen
+  - Keine Auffahrten
+
+- Längeres Verweilen sowie der Umgang mit dem Telefon müssen geduldet sein.
+  - Botschaften, Polizeipräsidien oder anderen bewachte Gebäude sind ein No-Go
+
+- Ausreichend Platz zum Spielen ohne im Weg zu stehen
+
+- Öffentlicher Zugang zu jeder Tageszeit
+
+- Verändert sich nicht in absehbarer Zeit:
+  - Bei direkter Sonneneinstrahlung nicht von kontrastreicher Schattenbildung betroffen
+  - Nicht von Vandalismus betroffen
+
+- Mit geeignetem [Einstiegspunkt](3.3-worldmap-erstellung.html#einstiegspunkt-definieren) ausgestattet
 
 
 ### Perfekte Bedingungen für einen Scan
 - Trockener Untergrund
 - Idealerweise bewölktes Wetter
+- Keine kontrastreichen Schattenbildungen auf den zu scannenden Oberflächen
+- Ausreichendes Tageslicht
 
 
 ## Scan
 ### Positionierung der Objekte
-Die Objekte können innerhalb der Session frei positioniert und rotiert werden. Die Interaktionen dazu sind (hier)[] aufgelistet.
+
+Die Objekte können innerhalb der Session frei positioniert und rotiert werden.
+Die Interaktionen dazu sind [hier](3.2-app-aufbau.html#ar-session) aufgelistet.
 
 
-### Einstiegspunkte definieren
+### Einstiegspunkt definieren
 
-Bei der Erstellung einer WorldMap ist es wichtig einen markanten Einstiegspunkt für die Session zu wählen. Dieser Einstiegspunkt zeichnet sich entweder durch eine markante Topologie oder/und eine markante Oberflächenbeschaffenheit aus. Um sicherzugehen, dass dieser Einstiegspunkt auch in der WorldMap entsprechend gespeichert wird, sollte die Session mit dem Scannen dieses Punktes gestartet werden. Ob der Einstiegspunkt funktioniert, kann am Einfachsten getestet werden, indem die Session über "Play Session" direkt gespielt wird. Um eine WorldMap flexibler und für die User*in im Spiel einfacher zu erkennen zu machen, macht es Sinn mehrere Einstiegspunkte in die WorldMap zu integrieren. Dazu beginnt man den erneuten Scanning-Prozess am zusätzlich gewählten Einstiegspunkt und bewegt sich dann zum bereits zuvor angelegten Einstiegspunkt vor. Wird die WorldMap dann am alten Einstiegspunkt erkannt und geladen, befinden sich beide Einstiegspunkte in der WorldMap. Weitere Einstiegspunkte können nach dem gleichen Ablauf hinzugefügt werden. Ab einer bestimmten Größe der WorldMap werden vorherige Einstiegspunkte aber wieder überschrieben. Eine genaue Regel dazu gibt es nicht. Die Funktionsweise der WorldMaps muss daher kontinuierlich getestet werden.
+Der Einstiegspunkt ist der Punkt eines Ortes, der so markant ist, dass die WorldMap anhand dessen direkt erkannt wird.
+Hinweis-Bild und Hinweis-Text beziehen sich auf diesen.
+
+Je markanter dieser Einstiegspunkt aufgrund seiner Oberflächenbeschaffenheit oder Topologie ist, desto besser funktioniert er
+
+#### Vorgehen
+
+Um sicherzugehen, dass dieser Einstiegspunkt auch in der WorldMap entsprechend gespeichert wird, sollte die Session mit dem Scannen dieses Punktes gestartet werden. Ob der Einstiegspunkt funktioniert, kann am Einfachsten getestet werden, indem die Session über "Play Session" direkt gespielt wird.
+
+#### Bewertung der Qualität eines Einstiegspunktes
 
 Charakteristiken guter Einstiegspunkte:
 * Markante Topologie
@@ -42,12 +67,22 @@ Charakteristiken guter Einstiegspunkte:
 
 Charakteristiken schlechter Einstiegspunkte:
 * Kontrastreiche Oberflächen, die vergänglich sind (z.B. Graffiti)
+* Kontrastarme Oberflächen
 
+#### Mehrere Einstiegspunkte
+
+Um eine WorldMap flexibler und für die User*in im Spiel einfacher zu erkennen zu machen, macht es Sinn mehrere Einstiegspunkte in die WorldMap zu integrieren. Dazu beginnt man den erneuten Scanning-Prozess am zusätzlich gewählten Einstiegspunkt und bewegt sich dann zum bereits zuvor angelegten Einstiegspunkt vor. Wird die WorldMap dann am alten Einstiegspunkt erkannt und geladen, befinden sich beide Einstiegspunkte in der WorldMap. Weitere Einstiegspunkte können nach dem gleichen Ablauf hinzugefügt werden.
+
+#### Testen
+
+Ab einer bestimmten Größe der WorldMap werden vorherige Einstiegspunkte aber wieder überschrieben. Eine genaue Regel dazu gibt es nicht. Die Funktionsweise der WorldMaps muss daher kontinuierlich getestet werden.
+
+
+### Speichern
 
 ## Export
-Die erstellte WorldMap-Datei kann über die Export-Funktion des Portal Editors [5.3](3.2-app-aufbau.html#worldmap-details) exportiert werden.
-
-Danach muss diese auf Contentful hochgeladen und dem entsprechenden Portal hinzugefügt werden.
+Die erstellte WorldMap-Datei kann über die Export-Funktion des Portal Editors [5.3](3.2-app-aufbau.html#worldmap-details) exportiert werden. Aus dem Sharing-Dialog heraus kann diese per Mail oder Airdrop an einen Rechner geschickt werden.
+Dort kann diese auf Contentful hochgeladen und dem entsprechenden Portal hinzugefügt werden.
 
 ## Erstellung spieltechnischer Zusatzinhalte
 
