--- a/3.3-worldmap-erstellung.md
+++ b/3.3-worldmap-erstellung.md
@@ -16,11 +16,11 @@ nav_order: 3
 
 Da das Spiel im öffentlichen Raum stattfindet, ist die Auswahl des richtigen Spielortes von besonderer Bedeutung. Dazu gibt es einige Kern-Kriterien:
 
-- Sicherheit der User*in muss bestmöglich gewährleistet sein:
+* Sicherheit der User*in muss bestmöglich gewährleistet sein:
   - Abseits von Verkehr und Straßen
   - Keine Auffahrten
 
-- Längeres Verweilen sowie der Umgang mit dem Telefon müssen geduldet sein.
+* Längeres Verweilen sowie der Umgang mit dem Telefon müssen geduldet sein.
   - Botschaften, Polizeipräsidien oder anderen bewachte Gebäude sind ein No-Go
 
 - Ausreichend Platz zum Spielen ohne im Weg zu stehen
