--- a/2.2-cms-struktur.md
+++ b/2.2-cms-struktur.md
@@ -89,6 +89,11 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 ### Bild für Sammelalbum: Contentful Media Asset
 - Ausspielungen: [7.1](1.2-spielaufbau.html#portalseite)
 
+### Bemerkungen: Text
+- für den internen Gebrauch, insbesondere zur Absprache zwischen Redaktion und Provider der spieltechnischen Inhalte
+- bspw. für nähere Angaben zur exakten Platzierung der Worldmap, Objekte in der Worldmap etc.
+- dazu wird dieser Text auch in der Companion App __Portal Editor__ ausgespielt
+
 ### World Maps: [Worldmap](#worldmap) (mult.)
 - Fürs Einrichten können mehrere Worldmaps eingetragen werden
 - Die jeweils oberste Worldmap wird im Spiel benutzt
@@ -163,7 +168,7 @@ Das Hinweisobjekt ist ein 2D-Objekt mit Vorder- und Rückseite, das frei bewegt 
 ### Title: Text
 
 ### Map File: Contentful Media Asset
-- Ausschließlich aus der [Portal Editor Companion App](TODO:LINK) exportierte .map Dateien hier eingetragen
+- Ausschließlich aus der [Portal Editor Companion App](https://github.com/museum4punkt0/Object-by-Object/tree/master/02%20Portal%20Editor%20App) exportierte .map Dateien hier eintragen
 - Der nach Upload der Datei automatisch erzeugte Title-Eintrag des Contentful Media Assets (nicht des Wordmap Objekts) darf __nicht geändert__ werden
 
 
