--- a/2.3-hauptinhalte.md
+++ b/2.3-hauptinhalte.md
@@ -9,6 +9,8 @@ nav_order: 3
 
 Die redaktionellen Inhalte konstituieren sich aus Einzelobjekten, die thematisch in Geschichten zusammengefasst und innerhalb dieser Geschichten an geografischen Orten (Portalen) gruppiert sind.
 
+## Objekte
+
 ![Objekte](/img/content-structure-1.png)
 
 Der Hauptinhalt des [CP 3: Objekt](2.2-cms-struktur.html#cp-3-objekt) umfasst
@@ -18,6 +20,8 @@ Der Hauptinhalt des [CP 3: Objekt](2.2-cms-struktur.html#cp-3-objekt) umfasst
 - Mediendatei [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#media-contentful-media-asset-mult)
 - stiftende Organisation [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#stiftende-organisation-cp-5-institution)
 - ist das Objekt zum Teilen freigegeben?  [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#zum-teilen-freigegeben-janein)
+
+## Portale
 
 ![Portale](/img/content-structure-2.png)
 
@@ -33,8 +37,10 @@ Der Hauptinhalt des [CP 2: Portal](2.2-cms-struktur.html#cp-2-portal) umfasst
 - portalspezifische Story [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#portalspezifische-story-textobjekt)
 - geografische Lage [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#standort-gps-location)
 - enthaltene Objekte [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#objekte-cp-3-objekt-mult)
-- Verlinkung auf Folgeportal [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#)
-- Bemerkungen [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#)
+- Verlinkung auf Folgeportal [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#linkobjekttyp-linkobjekttyp)
+- Bemerkungen [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#bemerkungen-text)
+
+## Geschichte
 
 ![Verlinkte Geschichte](/img/content-structure-4.png)
 
