--- a/2.4-zusatzinhalte.md
+++ b/2.4-zusatzinhalte.md
@@ -7,6 +7,64 @@ nav_order: 4
 
 # Spieltechnische Zusatzinhalte
 
-## Worldmap
+Die spieltechnischen Zusatzinhalte stellen Ergänzungen der redaktionellen Inhalte dar, die für den Spielablauf notwendig sind. Sie machen die redaktionellen Inhalte in den Augmented-Reality-Szenen des Spiels zugänglich und geben Hilfestellung beim Spielverlauf.
 
-## Hilfestellung für den Einstieg
+## Augmented Reality
+
+Mit Augmented Reality (AR) werden virtuelle Objekte als Erweiterung (Augmentation) der physischen Realität in einen Kameraausschnitt der realen Welt projiziert. Dazu muss die verwendete Hardware ausreichend topografische Informationen über die unmittelbare physische Umgebung besitzen oder sich verschaffen, um sich in Echtzeit in ihr orientieren zu können. So kann die Projektion die Illusion entstehen lassen, dass sich virtuelle Objekte in der physischen Welt befinden.
+
+## Persistent AR und Worldmaps
+
+Von Persistenz ist die Rede, wenn
+- die topografischen Informationen über die physische Welt sowie
+- die Informationen über die Verankerung virtueller Objekte in der Topografie
+über den Rahmen einer AR-Session hinaus weiterbestehen.
+
+Dazu werden diese Informationen in einer Datei gespeichert. Diese Datei wird als _Worldmap_ bezeichnet.
+
+### Persistente AR-Sessions
+
+Ein AR-Session, die mit einer vorab angelegten Worldmap gestartet wird, ist eine persistente AR-Session. Die in Echtzeit durchgeführte Welterkennung wird mit den topografischen Informationen der geladenen Worldmap abgeglichen.
+
+In der _Anbahnungsphase_ versucht die Session, eine ausreichende _Übereinstimmung_ zwischen geladener Topografie und Echtzeit-Topografie zu finden. Nach Auffinden der Übereinstimmung werden die geladenen und die in Echtzeit vorliegenden topografischen Informationen vereint. Ab diesem Zeitpunkt stehen auch die geladenen Informationen über die Verankerung virtueller Objekte zur Verfügung, die Objekte können dargestellt werden.
+
+__Ortsabhängigkeit__
+
+Persistente AR-Sessions sind ortsabhängig. Um die _Übereinstimmung_ zwischen geladener Worldmap und realer Topografie zu erreichen, müssen zusätzliche [Hilfestellungen](#hilfestellungen-für-den-einstieg) gegeben werden.
+
+Die [regulären Portal-Sessions](1.2-spielaufbau.html#ar-session-regulär) der App __Object by Object__ sind in der Regel persistente AR-Sessions.
+
+### Ad-Hoc AR-Sessions
+
+Eine AR-Session, die ohne Persistenz-Informationen ausgeführt wird, wird als _ad-hoc_ bezeichnet. Als topografische Grundlage dient lediglich die in Echtzeit erkannte Fußboden-Ebene. Die Verankerung der virtuellen Objekte erfolgt automatisiert.
+
+__Ortsabhängigkeit__
+
+Ad-Hoc AR-Sessions haben grundsätzlich keine Ortsabhängigkeit und benötigen weder eine vorgefertigte Worldmap noch Hilfestellungen für den Einstieg.
+
+In __Object by Object__ ist das [Einstiegs-Portal](1.2-spielaufbau.html#ar-session-tourbeginn) bei Tour-Beginn als Ad-Hoc AR-Session realisiert. Sie wird initiiert zu dem Zeitpunkt und an dem Ort, an dem die User*in die Tour beginnt.
+
+Die [regulären Portal-Sessions](1.2-spielaufbau.html#ar-session-regulär) in __Object by Object__ können als Ad-Hoc Sessions angelegt werden. Dann sind über die redaktionell festgelegte Geoposition (Standort) des Portals hinaus keinerlei spieltechnische Zusatzinhalte notwendig.
+
+## Hilfestellungen für den Session-Einstieg
+
+Wegen der Ortsabhängigkeit persistenter AR-Sessions muss eine genaue Lokalisierung des Session-Standorts gewährleistet sein.
+
+Nachdem die User*in anhand der redaktionell festgelegten Geoposition den Session-Standort GPS-genau aufgefunden hat, ist im Allgemeinen eine exakte Ausrichtung der Kamera auf das Einstiegs-Areal der persistenten Worldmap notwendig.
+
+Dafür sind
+- ein kurzer textlicher Hinweis auf die Session-Einstiegsstelle ([5.1](1.2-spielaufbau.html#ar-session-regulär)) sowie
+- ein Foto der Session-Einstiegsstelle als bildlicher Hinweis ([5.2](1.2-spielaufbau.html#ar-session-regulär))
+vorgesehen.
+
+Der textliche Hinweis wird unmittelbar gegeben, der bildliche Hinweis bei Bedarf angezeigt.
+
+## Spieltechnische Zusatzinhalte
+
+Hieraus ergeben sich die folgenden spieltechnischen Zusatzinhalte im CMS.
+
+### Spieltechnischer Zusatzinhalt des [CP 2: Portal]
+
+- WorldMap [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#world-maps-worldmap-mult)
+- textlicher Hinweis [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#hint-text-text)
+- bildlicher Hinweis [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#hint-image-contentful-media-asset)
