--- a/3.3-worldmap-erstellung.md
+++ b/3.3-worldmap-erstellung.md
@@ -14,16 +14,17 @@ nav_order: 3
 
 ### Auswahl des richtigen Spielortes
 
-Da das Spiel im öffentlichen Raum stattfindet, ist die Auswahl des richtigen Spielortes von besonderer Bedeutung. Dazu gibt es einige Kern-Kriterien:
+Da das Spiel im öffentlichen Raum stattfindet, ist die Auswahl des richtigen Spielortes von besonderer Bedeutung.
+Dazu gibt es einige Kern-Kriterien:
 
-* Sicherheit der User*in muss bestmöglich gewährleistet sein:
+- Sicherheit der User*in muss bestmöglich gewährleistet sein:
   - Abseits von Verkehr und Straßen
   - Keine Auffahrten
 
-* Längeres Verweilen sowie der Umgang mit dem Telefon müssen geduldet sein.
+- Längeres Verweilen sowie der Umgang mit dem Telefon müssen geduldet sein.
   - Botschaften, Polizeipräsidien oder anderen bewachte Gebäude sind ein No-Go
 
-- Ausreichend Platz zum Spielen ohne im Weg zu stehen
+- Ausreichend Platz zum Spielen
 
 - Öffentlicher Zugang zu jeder Tageszeit
 
@@ -35,19 +36,20 @@ Da das Spiel im öffentlichen Raum stattfindet, ist die Auswahl des richtigen Sp
 
 
 ### Perfekte Bedingungen für einen Scan
-- Trockener Untergrund
-- Idealerweise bewölktes Wetter
-- Keine kontrastreichen Schattenbildungen auf den zu scannenden Oberflächen
+Sobald die Entscheidung für einen Spielort gefallen ist, müssen Tageszeit und Wetterbedingungen beachtet werden, um den besten Zeitpunkt für einen Scan abzupassen.  Die Kern-Kriterien sind:
+
 - Ausreichendes Tageslicht
+  - Die Scan-Qualität ist direkt vom Grad der Ausleuchtung abhängig
+
+- Trockener Untergrund
+  - Nässe färbt den Untergrund dunkler, was dazu führen kann, dass die WorldMap bei trockenem Wetter nicht wieder erkannt wird
+
+- Keine kontrastreichen Schattenbildungen auf den zu scannenden Oberflächen
+  - Schatten verändern sich mit dem Lauf der Sonne und damit ändert sich auch die Wahrscheinlichkeit der Wiedererkennung
+
 
 
 ## Scan
-### Positionierung der Objekte
-
-Die Objekte können innerhalb der Session frei positioniert und rotiert werden.
-Die Interaktionen dazu sind [hier](3.2-app-aufbau.html#ar-session) aufgelistet.
-
-
 ### Einstiegspunkt definieren
 
 Der Einstiegspunkt ist der Punkt eines Ortes, der so markant ist, dass die WorldMap anhand dessen direkt erkannt wird.
@@ -78,7 +80,13 @@ Um eine WorldMap flexibler und für die User*in im Spiel einfacher zu erkennen z
 Ab einer bestimmten Größe der WorldMap werden vorherige Einstiegspunkte aber wieder überschrieben. Eine genaue Regel dazu gibt es nicht. Die Funktionsweise der WorldMaps muss daher kontinuierlich getestet werden.
 
 
+### Positionierung der Objekte
+Die Objekte können innerhalb der Session frei positioniert und rotiert werden.
+Die Interaktionen dazu sind [hier](3.2-app-aufbau.html#ar-session) aufgelistet.
+
+
 ### Speichern
+
 
 ## Export
 Die erstellte WorldMap-Datei kann über die Export-Funktion des Portal Editors [5.3](3.2-app-aufbau.html#worldmap-details) exportiert werden. Aus dem Sharing-Dialog heraus kann diese per Mail oder Airdrop an einen Rechner geschickt werden.
