--- a/3.3-worldmap-erstellung.md
+++ b/3.3-worldmap-erstellung.md
@@ -9,10 +9,13 @@ nav_order: 3
 
 ## Einleitung
 
+### Hardware-Voraussetzungen
+Grundsätzlich ist der Scan mit jedem ARKit-fähigen iOS-Gerät möglich, die Scan-Qualität ist aber von der Qualität der Kamera und des Prozessors abhängig. Um die bestmögliche Scan-Qualität zu erreichen, wird ein LIDAR-fähiges Gerät (z.B. iPad Pro 2019) empfohlen.
 
-## Vorbereitung
 
-### Auswahl des richtigen Spielortes
+## Scan-Vorbereitung
+
+### Auswahl des Spielortes
 
 Da das Spiel im öffentlichen Raum stattfindet, ist die Auswahl des richtigen Spielortes von besonderer Bedeutung.
 Dazu gibt es einige Kern-Kriterien:
@@ -35,7 +38,7 @@ Dazu gibt es einige Kern-Kriterien:
 - Mit geeignetem [Einstiegspunkt](3.3-worldmap-erstellung.html#einstiegspunkt-definieren) ausgestattet
 
 
-### Perfekte Bedingungen für einen Scan
+### Auswahl des Zeitpunktes
 Sobald die Entscheidung für einen Spielort gefallen ist, müssen Tageszeit und Wetterbedingungen beachtet werden, um den besten Zeitpunkt für einen Scan abzupassen.  Die Kern-Kriterien sind:
 
 - Ausreichendes Tageslicht
@@ -48,18 +51,13 @@ Sobald die Entscheidung für einen Spielort gefallen ist, müssen Tageszeit und 
   - Schatten verändern sich mit dem Lauf der Sonne und damit ändert sich auch die Wahrscheinlichkeit der Wiedererkennung
 
 
-
-## Scan
-### Einstiegspunkt definieren
+### Auswahl des Einstiegspunkes
 
 Der Einstiegspunkt ist der Punkt eines Ortes, der so markant ist, dass die WorldMap anhand dessen direkt erkannt wird.
 Hinweis-Bild und Hinweis-Text beziehen sich auf diesen.
 
 Je markanter dieser Einstiegspunkt aufgrund seiner Oberflächenbeschaffenheit oder Topologie ist, desto besser funktioniert er
 
-#### Vorgehen
-
-Um sicherzugehen, dass dieser Einstiegspunkt auch in der WorldMap entsprechend gespeichert wird, sollte die Session mit dem Scannen dieses Punktes gestartet werden. Ob der Einstiegspunkt funktioniert, kann am Einfachsten getestet werden, indem die Session über "Play Session" direkt gespielt wird.
 
 #### Bewertung der Qualität eines Einstiegspunktes
 
@@ -70,6 +68,40 @@ Charakteristiken guter Einstiegspunkte:
 Charakteristiken schlechter Einstiegspunkte:
 * Kontrastreiche Oberflächen, die vergänglich sind (z.B. Graffiti)
 * Kontrastarme Oberflächen
+
+
+## Scan
+
+### 1. WorldMap erstellen
+
+
+### 2. AR-Session starten
+
+
+### 3. Einstiegspunkt scannen
+
+
+### 4. Objekte positionieren
+
+
+### 5. Speichern
+
+
+### 6. Weitere Einstiegspunkte hinzufügen
+
+
+### 7. Testen
+
+
+### 8. Exportieren
+
+
+
+
+#### Vorgehen
+
+Um sicherzugehen, dass dieser Einstiegspunkt auch in der WorldMap entsprechend gespeichert wird, sollte die Session mit dem Scannen dieses Punktes gestartet werden. Ob der Einstiegspunkt funktioniert, kann am Einfachsten getestet werden, indem die Session über "Play Session" direkt gespielt wird.
+
 
 #### Mehrere Einstiegspunkte
 
@@ -84,6 +116,9 @@ Ab einer bestimmten Größe der WorldMap werden vorherige Einstiegspunkte aber w
 Die Objekte können innerhalb der Session frei positioniert und rotiert werden.
 Die Interaktionen dazu sind [hier](3.2-app-aufbau.html#ar-session) aufgelistet.
 
+Fragmentierung sollte bekannt sein. Es gibt ein Primär-Objekt, zu dem alle anderen rangepuzzelt werden. Das Primär-Objekt lässt sich daran erkennen, dass es im Gegensatz zu den anderen Teilen nicht maskiert dargestellt wird. Das Primär-Objekt sollte aus UX-Gründen an der Wand positioniert werden. Die anderen Teile sollen auf dem Boden positioniert werden.
+
+![Fragmentiertes Poster](/img/pe_fragment.png)
 
 ### Speichern
 
