--- a/3.3-worldmap-erstellung.md
+++ b/3.3-worldmap-erstellung.md
@@ -51,21 +51,21 @@ Sobald die Entscheidung für einen Spielort gefallen ist, müssen Tageszeit und 
   - Schatten verändern sich mit dem Lauf der Sonne und damit ändert sich auch die Wahrscheinlichkeit der Wiedererkennung
 
 
-### Auswahl des Einstiegspunkes
+### Auswahl des Einstiegsareals
 
-Der Einstiegspunkt ist der Punkt eines Ortes, der so markant ist, dass die WorldMap anhand dessen direkt erkannt wird.
+Das Einstiegsareal ist der Bereich eines Ortes, der so markant ist, dass die WorldMap anhand dessen direkt erkannt wird.
 Hinweis-Bild und Hinweis-Text beziehen sich auf diesen.
 
-Je markanter dieser Einstiegspunkt aufgrund seiner Oberflächenbeschaffenheit oder Topologie ist, desto besser funktioniert er
+Je markanter dieses Areal aufgrund seiner Oberflächenbeschaffenheit oder Topologie ist, desto besser funktioniert es.
 
 
-#### Bewertung der Qualität eines Einstiegspunktes
+#### Bewertung der Qualität eines Einstiegsareals
 
-Charakteristiken guter Einstiegspunkte:
+Was gut funktioniert:
 * Markante Topologie
 * Kontrastreiche Oberflächenbeschaffenheit
 
-Charakteristiken schlechter Einstiegspunkte:
+Was nicht gut funktioniert:
 * Kontrastreiche Oberflächen, die vergänglich sind (z.B. Graffiti)
 * Kontrastarme Oberflächen
 
@@ -78,7 +78,7 @@ Charakteristiken schlechter Einstiegspunkte:
 ### 2. AR-Session starten
 
 
-### 3. Einstiegspunkt scannen
+### 3. Einstiegsareal scannen
 
 
 ### 4. Objekte positionieren
@@ -87,7 +87,7 @@ Charakteristiken schlechter Einstiegspunkte:
 ### 5. Speichern
 
 
-### 6. Weitere Einstiegspunkte hinzufügen
+### 6. Robustheit des Einstiegsareals verbessern
 
 
 ### 7. Testen
