--- a/2.2-cms-struktur.md
+++ b/2.2-cms-struktur.md
@@ -75,6 +75,7 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 - Eingabe im CMS Texteingabe der Adresse kann genutzt werden, ausschlaggebend ist die Position der Nadel in der Kartendarstellung
 
 ### Objekte: [CP 3: Objekt](#cp-3-objekt) (mult.)
+- beschränkt auf 8 Objekte pro Portal
 
 ### Linkobjekttyp: Linkobjekttyp
 - legt den Typ des Navigationsartefakts fest, das zum nächsten Portal führt
