--- a/2.3-hauptinhalte.md
+++ b/2.3-hauptinhalte.md
@@ -36,7 +36,7 @@ Der Hauptinhalt des [CP 2: Portal](2.2-cms-struktur.html#cp-2-portal) umfasst
 - Titel [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#titel-text-1)
 - portalspezifische Story [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#portalspezifische-story-textobjekt)
 - geografische Lage [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#standort-gps-location)
-- enthaltene Objekte [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#objekte-cp-3-objekt-mult)
+- enthaltene Objekte (max. 8) [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#objekte-cp-3-objekt-mult)
 - Verlinkung auf Folgeportal [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#linkobjekttyp-linkobjekttyp)
 - Bemerkungen [&#8594;](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#bemerkungen-text)
 
