--- a/3.3-worldmap-erstellung.md
+++ b/3.3-worldmap-erstellung.md
@@ -53,9 +53,9 @@ Sobald die Entscheidung für einen Spielort gefallen ist, müssen Tageszeit und 
 ### Einstiegspunkt definieren
 
 Der Einstiegspunkt ist der Punkt eines Ortes, der so markant ist, dass die WorldMap anhand dessen direkt erkannt wird.
-Hinweis-Bild und Hinweis-Text beziehen sich auf diesen.
+[Hinweis-Bild](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#hint-image-contentful-media-asset) und [Hinweis-Text](https://ekkip.github.io/zwanzig-ar-doc/2.2-cms-struktur.html#hint-text-text) beziehen sich auf diesen.
 
-Je markanter dieser Einstiegspunkt aufgrund seiner Oberflächenbeschaffenheit oder Topologie ist, desto besser funktioniert er
+Je markanter dieser Einstiegspunkt aufgrund seiner Oberflächenbeschaffenheit oder Topologie ist, desto besser funktioniert er.
 
 #### Vorgehen
 
@@ -73,7 +73,7 @@ Charakteristiken schlechter Einstiegspunkte:
 
 #### Mehrere Einstiegspunkte
 
-Um eine WorldMap flexibler und für die User*in im Spiel einfacher zu erkennen zu machen, macht es Sinn mehrere Einstiegspunkte in die WorldMap zu integrieren. Dazu beginnt man den erneuten Scanning-Prozess am zusätzlich gewählten Einstiegspunkt und bewegt sich dann zum bereits zuvor angelegten Einstiegspunkt vor. Wird die WorldMap dann am alten Einstiegspunkt erkannt und geladen, befinden sich beide Einstiegspunkte in der WorldMap. Weitere Einstiegspunkte können nach dem gleichen Ablauf hinzugefügt werden.
+Um eine WorldMap flexibler und für die User*in im Spiel einfacher zu erkennen zu machen, ist es sinnvoll, mehrere Einstiegspunkte in die WorldMap zu integrieren. Dazu beginnt man den erneuten Scanning-Prozess am zusätzlich gewählten Einstiegspunkt und bewegt sich dann zum bereits zuvor angelegten Einstiegspunkt vor. Wird die WorldMap dann am alten Einstiegspunkt erkannt und geladen, befinden sich beide Einstiegspunkte in der WorldMap. Weitere Einstiegspunkte können nach dem gleichen Ablauf hinzugefügt werden.
 
 #### Testen
 
