--- a/3.2-app-aufbau.md
+++ b/3.2-app-aufbau.md
@@ -5,7 +5,7 @@ grand_parent: Übersicht
 nav_order: 2
 ---
 
-# Portal Editor Benutzung
+# App-Aufbau
 
 Der Portal Editor ist eine Companion-App für Object by Object, mit der die persistenten WorldMaps für das Spiel erstellt und getestet werden können.
 
@@ -25,9 +25,8 @@ Durch Auswahl eines Portals öffnet sich die Portalseite, auf der sich alle rele
 
 Dazu gehören die genaue Position des Portals auf Basis der Koordinaten (3.1), im CMS hinterlegte Bemerkungen (3.2) sowie alle im CMS und lokal gespeicherten WorldMaps (3.3, 3.4).
 
-Über den "+"-Button (3.5) lässt sich eine ganz neue WorldMap erstellen.
-Über "Start Ad-Hoc-Session"-Button (3.6) startet eine AR-Session ohne WorldMap. Dies ist nützlich, um einen schnellen ersten Blick auf die im Portal hinterlegten Objekte zu bekommen.
-
+Über den __+__-Button (3.5) lässt sich eine ganz neue WorldMap erstellen.
+Falls das Portal als Ad-Hoc-Session ohne WorldMap geplant ist, lässt sich über den Button __Start Ad-Hoc-Session__ (3.6) die automatisierte Platzierung des Portals und der enthaltenen Objekte in einer Ad-Hoc-Session testen.
 
 ## WorldMap Details
 
@@ -36,8 +35,8 @@ Nach Auswahl einer WorldMap werden alle Optionen zur Arbeit mit der WorldMap auf
 ![WorldMap Detail Page](/img/pe_map_1.png) ![WorldMap Detail Page mit Hinweisbild](/img/pe_map_clue_image.png)
 
 ### Session-Einstellungen
-* "Show Debugging Options" (4.1) startet die AR-Session in einem Debugging-Modus, bei dem alle in der Session erkannten Flächen und Punktwolken visualisiert werden. So wird der Fortschritt des aktuellen Scanning-Prozesses sowie der genaue Inhalt einer gerade geladenen bzw. erstellten WorldMap transparent gemacht. Der maskierende Effekt des Portals wird dabei entfernt.
-* "Set Alignment" (4.2) definiert welche Flächen beim Scannen für die Erstellung der WorldMap berücksichtigt werden sollen:
+* __Show Debugging Options__ (4.1) startet die AR-Session in einem Debugging-Modus, bei dem alle in der Session erkannten Flächen und Punktwolken visualisiert werden. So wird der Fortschritt des aktuellen Scanning-Prozesses sowie der genaue Inhalt einer gerade geladenen bzw. erstellten WorldMap transparent gemacht. Der maskierende Effekt des Portals wird dabei entfernt.
+* __Set Alignment__ (4.2) definiert welche Flächen beim Scannen für die Erstellung der WorldMap berücksichtigt werden sollen:
   * Hori: Nur horizontale Oberflächen werden erkannt
   * Verti: Nur vertikale Oberflächen werden erkannt
   * Both: Horizontale und vertikale Oberflächen werden erkannt
@@ -45,11 +44,11 @@ Nach Auswahl einer WorldMap werden alle Optionen zur Arbeit mit der WorldMap auf
 
 ### Aktionen
 Unter den Session-Einstellungen befinden sich die Optionen zur Arbeit mit der ausgewählten WorldMap:
-* "Play Session" (4.3) lädt die aktuelle Version der WorldMap und verändert diese nicht
-* "Create New Session"/"Edit Session" (4.4) startet eine AR-Session mit der aktuellen Version der ausgewählten WorldMap und reichert diese während der Session mit weiteren Informationen an
-* "Create Local Copy" (4.5) dupliziert die aktuelle Version der WorldMap und speichert diese lokal ab
+* __Play Session__ (4.3) lädt die aktuelle Version der WorldMap und verändert diese nicht
+* __Create New Session__/__Edit Session__ (4.4) startet eine AR-Session mit der aktuellen Version der ausgewählten WorldMap und reichert diese während der Session mit weiteren Informationen an
+* __Create Local Copy__ (4.5) dupliziert die aktuelle Version der WorldMap und speichert diese lokal ab
 
-Das im CMS hinzugefügte Hinweis-Bild kann über den "Hinweis-Bild"-Button (4.6) am unteren Bildschirmrand angezeigt werden.
+Das im CMS hinzugefügte Hinweis-Bild kann über den __Hinweis-Bild__-Button (4.6) am unteren Bildschirmrand angezeigt werden.
 
 Ist eine WorldMap in einem zufriendenstellenden Zustand, so kann diese über den Export-Button (4.7) exportiert werden.
 
@@ -81,7 +80,7 @@ Sobald die Objekte im Raum positioniert sind, kann dann die Szene eingerichtet w
 
 ### Speicher-Einstellungen
 
-Standardmäßig ist während der Session der Auto-Save-Modus ausgeschaltet. Die Daten der ausgewählten WorldMap werden dann nicht automatisch mit den Daten der aktuellen Session angereichert. Stattdessen findet das Speichern entweder durch Auswahl des "Save"-Buttons (5.2) oder durch die Bestätigung des Speicherns beim Beenden der Session statt. Über den Auto-Save-Toggle (5.1) kann ein automatisches Speichern aktiviert werden.
+Standardmäßig ist während der Session der Auto-Save-Modus ausgeschaltet. Die Daten der ausgewählten WorldMap werden dann nicht automatisch mit den Daten der aktuellen Session angereichert. Stattdessen findet das Speichern entweder durch Auswahl des __Save__-Buttons (5.2) oder durch die Bestätigung des Speicherns beim Beenden der Session statt. Über den Auto-Save-Toggle (5.1) kann ein automatisches Speichern aktiviert werden.
 
 
 ### Performance-Informationen
