--- a/2.4-zusatzinhalte.md
+++ b/2.4-zusatzinhalte.md
@@ -59,7 +59,7 @@ vorgesehen.
 
 Der textliche Hinweis wird unmittelbar gegeben, der bildliche Hinweis bei Bedarf angezeigt.
 
-## Spieltechnische Zusatzinhalte
+## Spieltechnische Zusatzinhalte im CMS
 
 Hieraus ergeben sich die folgenden spieltechnischen Zusatzinhalte im CMS.
 
