--- a/3.3-worldmap-erstellung.md
+++ b/3.3-worldmap-erstellung.md
@@ -9,6 +9,10 @@ nav_order: 3
 
 ## Einleitung
 
+### Augmented Reality
+
+Die mit dem __Portal Editor__ zu erstellenden WordMaps sind Teil der __spieltechnischen Zusatzinhalte__ für die App __Object by Object__ (siehe [Dokumentation](2.4-zusatzinhalte.html)). WorldMaps bilden die technische Grundlage für [Persistent AR](2.4-zusatzinhalte.html#persistent-ar-und-worldmaps).
+
 ### Hardware-Voraussetzungen
 Grundsätzlich ist der Scan mit jedem ARKit-fähigen iOS-Gerät möglich, die Scan-Qualität ist aber von der Qualität der Kamera und des Prozessors abhängig. Um die bestmögliche Scan-Qualität zu erreichen, wird ein LIDAR-fähiges Gerät (z.B. iPad Pro 2019) empfohlen.
 
@@ -105,7 +109,7 @@ Um sicherzugehen, dass dieser Einstiegspunkt auch in der WorldMap entsprechend g
 
 #### Mehrere Einstiegspunkte
 
-Um eine WorldMap flexibler und für die User*in im Spiel einfacher zu erkennen zu machen, ist es sinnvoll, mehrere Einstiegspunkte in die WorldMap zu integrieren. Dazu beginnt man den erneuten Scanning-Prozess am zusätzlich gewählten Einstiegspunkt und bewegt sich dann zum bereits zuvor angelegten Einstiegspunkt vor. Wird die WorldMap dann am alten Einstiegspunkt erkannt und geladen, befinden sich beide Einstiegspunkte in der WorldMap. Weitere Einstiegspunkte können nach dem gleichen Ablauf hinzugefügt werden.
+Um eine WorldMap flexibler und für die User\*in im Spiel einfacher auffindbar zu machen, ist es sinnvoll, mehrere Einstiegspunkte in die WorldMap zu integrieren. Dazu beginnt man den erneuten Scanning-Prozess am zusätzlich gewählten Einstiegspunkt und bewegt sich dann zum bereits zuvor angelegten Einstiegspunkt vor. Wird die WorldMap dann am alten Einstiegspunkt erkannt und geladen, befinden sich beide Einstiegspunkte in der WorldMap. Weitere Einstiegspunkte können nach dem gleichen Ablauf hinzugefügt werden.
 
 #### Testen
 
@@ -158,7 +162,7 @@ Beim Spielen der Session werden detaillierte Informationen zur Performance ausge
 
 ### Arbeit mit einer bestehenden WorldMaps
 
-WorldMaps sind die Grundlage einer persistenten AR-Experience. Dabei sind das Portal und alle enthaltenen Objekte für jede User*in tatsächlich am räumlich identischen Ort positioniert. Die WorldMap sorgt für diese übereinstimmende Positionierung. Dazu enthält die WorldMap Informationen über die Umgebung wie die Positionierung und Größe horizontaler und vertikaler Flächen, Punktwolken, sowie die Farbgebung der darunter liegenden Oberflächen. Spielt die User*in das Spiel und möchte ein Portal öffnen, werden die beim Scannen gesammelten Informationen mit den in der WorldMap gespeicherten Informationen kontinuierlich abgeglichen. Sobald es beim Abgleich der Informationen eine ausreichende Übereinstimmung gibt, wird die WorldMap geladen und die 3D-Objekte entsprechend im Raum positioniert.
+WorldMaps sind die Grundlage einer persistenten AR-Experience. Dabei sind das Portal und alle enthaltenen Objekte für jede User\*in tatsächlich am räumlich identischen Ort positioniert. Die WorldMap sorgt für diese übereinstimmende Positionierung. Dazu enthält die WorldMap Informationen über die Umgebung wie die Positionierung und Größe horizontaler und vertikaler Flächen, Punktwolken, sowie die Farbgebung der darunter liegenden Oberflächen. Spielt die User\*in das Spiel und möchte ein Portal öffnen, werden die beim Scannen gesammelten Informationen mit den in der WorldMap gespeicherten Informationen kontinuierlich abgeglichen. Sobald es beim Abgleich der Informationen eine ausreichende Übereinstimmung gibt, wird die WorldMap geladen und die 3D-Objekte entsprechend im Raum positioniert.
 
 
 ## Einstiegspunkte in die Session
