--- a/2.4-zusatzinhalte.md
+++ b/2.4-zusatzinhalte.md
@@ -42,7 +42,7 @@ __Ortsabhängigkeit__
 
 Ad-Hoc AR-Sessions haben grundsätzlich keine Ortsabhängigkeit und benötigen weder eine vorgefertigte Worldmap noch Hilfestellungen für den Einstieg.
 
-In __Object by Object__ ist das [Einstiegs-Portal](1.2-spielaufbau.html#ar-session-tourbeginn) bei Tour-Beginn als Ad-Hoc AR-Session realisiert. Sie wird initiiert zu dem Zeitpunkt und an dem Ort, an dem die User*in die Tour beginnt.
+In __Object by Object__ ist das [Einstiegs-Portal](1.2-spielaufbau.html#ar-session-tourbeginn) bei Tour-Beginn als Ad-Hoc AR-Session realisiert. Sie wird initiiert zu dem Zeitpunkt und an dem Ort, an dem die User\*in die Tour beginnt.
 
 Die [regulären Portal-Sessions](1.2-spielaufbau.html#ar-session-regulär) in __Object by Object__ können als Ad-Hoc Sessions angelegt werden. Dann sind über die redaktionell festgelegte Geoposition (Standort) des Portals hinaus keinerlei spieltechnische Zusatzinhalte notwendig.
 
@@ -50,7 +50,7 @@ Die [regulären Portal-Sessions](1.2-spielaufbau.html#ar-session-regulär) in __
 
 Wegen der Ortsabhängigkeit persistenter AR-Sessions muss eine genaue Lokalisierung des Session-Standorts gewährleistet sein.
 
-Nachdem die User*in anhand der redaktionell festgelegten Geoposition den Session-Standort GPS-genau aufgefunden hat, ist im Allgemeinen eine exakte Ausrichtung der Kamera auf das Einstiegs-Areal der persistenten Worldmap notwendig.
+Nachdem die User\*in anhand der redaktionell festgelegten Geoposition den Session-Standort GPS-genau aufgefunden hat, ist im Allgemeinen eine exakte Ausrichtung der Kamera auf das Einstiegs-Areal der persistenten Worldmap notwendig.
 
 Dafür sind
 - ein kurzer textlicher Hinweis auf die Session-Einstiegsstelle ([5.1](1.2-spielaufbau.html#ar-session-regulär)) sowie
