--- a/1.2-spielaufbau.md
+++ b/1.2-spielaufbau.md
@@ -9,13 +9,13 @@ nav_order: 1
 
 ## Intro
 
-Die mehrseitige Intro muss einmal durchgeblättert werden, von hier gelangt die User*in automatisch zur Tourauswahl.
+Die mehrseitige Intro muss einmal durchgeblättert werden, von hier gelangt die User\*in automatisch zur Tourauswahl.
 
 ![Intro](/img/1_intro.png)
 
 ## Tourauswahl
 
-Es werden alle Geschichten (auch als Touren oder "Zeitreisen" bezeichnet) angezeigt, die im (einzigen) Content-Eintrag des Typs [CP 0: Game](2.2-cms-struktur.html#cp0-game) gelistet sind. Die User*in kann anhand der Teasertexte (1.3), Tourlängen (1.4) und der jeweiligen Entfernung zum ersten Portal eine informierte Entscheidung für eine Tour treffen.
+Es werden alle Geschichten (auch als Touren oder "Zeitreisen" bezeichnet) angezeigt, die im (einzigen) Content-Eintrag des Typs [CP 0: Game](2.2-cms-struktur.html#cp0-game) gelistet sind. Die User\*in kann anhand der Teasertexte (1.3), Tourlängen (1.4) und der jeweiligen Entfernung zum ersten Portal eine informierte Entscheidung für eine Tour treffen.
 
 ![Tourauswahl](/img/2_tourauswahl.png)
 
@@ -38,7 +38,7 @@ Nach Auswahl einer Tour beginnt unmittelbar die erste AR-Session als Ad-hoc-Sess
 
 ## Spielplan
 
-Nachdem das erste Navigationsartefakt (auch Linkobjekt) eingesammelt wurde, gelangt die User*in zum Spielplan, einer interaktiven Karte mit dem [Pharusplan von 1929](https://de.wikipedia.org/wiki/Datei:Pharus_Map_Berlin_1929.jpg) als Overlay. Durch Aktivieren des Navigationsartefakts startet der Navigator.
+Nachdem das erste Navigationsartefakt (auch Linkobjekt) eingesammelt wurde, gelangt die User\*in zum Spielplan, einer interaktiven Karte mit dem [Pharusplan von 1929](https://de.wikipedia.org/wiki/Datei:Pharus_Map_Berlin_1929.jpg) als Overlay. Durch Aktivieren des Navigationsartefakts startet der Navigator.
 
 ![Spielplan](/img/4_spielplan.png)
 
@@ -67,7 +67,7 @@ Es gibt 3 Arten von Navigations-Artefakten:
 
 ![Session-Ablauf](/img/content-structure-5.png)
 
-Wurde der Ort gefunden (GPS-Genauigkeit) öffnet sich die AR-Session. Die User*in hat nun die Aufgabe, den Einstiegspunkt der Worldmap zu finden. Hierzu gibt es zunächst einen textlichen (5.1), bei Bedarf auch einen bildlichen Hinweis (6.1).
+Wurde der Ort gefunden (GPS-Genauigkeit) öffnet sich die AR-Session. Die User\*in hat nun die Aufgabe, den Einstiegspunkt der Worldmap zu finden. Hierzu gibt es zunächst einen textlichen (5.1), bei Bedarf auch einen bildlichen Hinweis (6.1).
 
 ![AR-Session Hint Text](/img/6_ar-session-1a.png) ![AR-Session Hint Image](/img/6_ar-session-1b.png)
 
