--- a/3.3-worldmap-erstellung.md
+++ b/3.3-worldmap-erstellung.md
@@ -86,6 +86,7 @@ Hierzu gibt es die folgenden Möglichkeiten:
 * Erstellung und Nutzung einer lokalen Kopie einer heruntergeladenen oder lokalen WorldMap [4.5](3.2-app-aufbau#worldmap-details)
 
 
+
 ### 2. AR-Session starten
 
 Nach der Auswahl der WorldMap wird die AR-Session dann über den Button `Create New Session`/`Edit Session` [4.4](3.2-app-aufbau#worldmap-details) gestartet.
@@ -93,6 +94,7 @@ Nach der Auswahl der WorldMap wird die AR-Session dann über den Button `Create 
 `Set Alignment` sollte auf `Both` gestellt sein [4.2](3.2-app-aufbau#worldmap-details), damit horizontale und vertikale Flächen erkannt werden.
 
 Die `Debugging Options` [4.1](3.2-app-aufbau#worldmap-details) geben während der Session wertvolles Feedback bezüglich des aktuellen Scan-Fortschritts, indem die gefundenen Flächen visualisiert werden. Gerade für Neulinge im Bereich der WorldMap-Erstellung ist es empfehlenswert diese einzuschalten.
+
 
 
 ### 3. Einstiegsareal scannen
@@ -106,6 +108,7 @@ Um eine Idee davon zu bekommen welche Oberflächen bereits erkannt wurden, sollt
 Der Scan-Vorgang sollte so lange fortgeführt werden bis alle Oberflächen, auf denen Objekte positioniert werden sollen, erfasst wurde.
 
 
+
 ### 4. Objekte positionieren
 
 Sind alle notwendigen Oberflächen erfasst, können die Objekte und das Portal den eigenen Wünschen entsprechend positioniert werden. Alle hinzugefügten Oberflächen können als Stehflächen für diese genutzt werden.
@@ -115,52 +118,54 @@ Die Position und Rotation aller Objekte wird mittels der [hier](3.2-app-aufbau.h
 Für die verschiedenen Objekt-Typen gibt es die folgenden Empfehlungen zur Positionierung:
 
 
-#### Portal
+`Portal`
 Empfohlene Orientierung: Horizontal
 Bemerkungen:
 * Das Portal muss vom Einstiegsareal aus für die User/in direkt ersichtlich sein. Daher darf es nicht zu nah und auch nicht zu weit entfernt von diesem positioniert sein. Ideal ist eine Entfernung von 3-4m.
 
-#### Self-Contained (3D-Modell)
+`Self-Contained (3D-Modell)`
 Empfohlene Orientierung: Abhängig vom Modell
 Bemerkungen:
 * Die Orientierung eines Self-Contained 3D-Models sollte der natürlichen Orientierung des Objektes entsprechen
 
-#### Paper (Papier)
+`Paper (Papier)`
 Empfohlene Orientierung: Abhängig vom Inhalt
 Bemerkungen:
 * Die Orientierung sollte dem Inhalt entsprechen. Ein historisches Poster sollte an einer Wand positioniert werden, ein historischer Vertrag hingegen macht vielleicht am meisten Sinn auf Tisch.
 
-#### Picture Frame (Bilderrahmen)
+`Picture Frame (Bilderrahmen)`
 Empfohlene Orientierung: Vertikal
 
-#### Camera on Tripod (Foto-Kamera)
+`Camera on Tripod (Foto-Kamera)`
 Empfohlene Orientierung: Horizontal
 Bemerkungen:
 * Idealerweise können der Inhalt des Fotos und die Ausrichtung der Kamera im Stadtraum in Verbindung miteinander gebracht werde (z.B. wird auf dem Foto ein historisches Gebäude abgebildet, sollte die Kamera, falls möglich, auch auf historischen Standplatz dieses Gebäudes ausgerichtet sein)
 
-#### Gramophone (Gramofon)
+`Gramophone (Gramofon)`
 Empfohlene Orientierung: Horizontal
 
-#### Film (Video)
+`Film (Video)`
 Empfohlene Orientierung: Vertikal
 
-#### Slide Projector (Dia-Projektor ohne Leinwand)
+`Slide Projector (Dia-Projektor ohne Leinwand)`
 Empfohlene Orientierung: Horizontal
 Bemerkungen:
 * Die Projektionsfläche sollte an einer physischen Wand platziert sein
 
-#### Slide Projector with Screen (Dia-Projektor mit Leinwand)
+`Slide Projector with Screen (Dia-Projektor mit Leinwand)`
 Empfohlene Orientierung: Horizontal
 
-#### Fragmente
+`Fragmente`
 Bei den Fragmenten gibt es grundsätzlich diee Unterscheidung zwischen Primär-Fragment (F.1) und normalen Fragmenten (F.2). Das Primär-Fragment ist jenes Fragment, an dem alle weiteren Fragmente zusammen gesetzt werden. Das Primär-Objekt lässt sich daran erkennen, dass es im Gegensatz zu den anderen Teilen nicht maskiert dargestellt wird (siehe Bild). Das Primär-Objekt sollte aus UX-Gründen an der Wand positioniert werden. Die anderen Teile sollen auf dem Boden positioniert werden.
 
 ![Fragmentiertes Poster](/img/pe_fragment.png)
 
 
+
 ### 5. Speichern
 
 Sind alle Objekte an ihrem gewünschten Platz, muss die WorldMap gespeichert werden. Ist die Auto-Save-Funktionalität nicht aktiviert, muss das Speichern nur beim Schließen der Session bestätigt werden.
+
 
 
 ### 6. Robustheit des Einstiegsareals verbessern
@@ -174,6 +179,7 @@ Je nach Bedarf können so durch zusätzliche Iterationen weitere Einstiegspunkte
 Ab einer bestimmten Größe der WorldMap werden vorherige Einstiegspunkte aber wieder überschrieben. Eine genaue Regel dazu gibt es nicht. Die Funktionsweise der WorldMaps muss daher kontinuierlich getestet werden.
 
 
+
 ### 7. Testen
 
 Die Funktionsweise der WorldMap lässt sich über `Play Session` [4.3](3.2-app-aufbau#worldmap-details) testen. Dabei ist besonders darauf zu achten wie schnell und problemlos das Laden der WorldMaps beim Scannen des Einstiegsareals funktioniert.
@@ -181,9 +187,11 @@ Die Funktionsweise der WorldMap lässt sich über `Play Session` [4.3](3.2-app-a
 Es ist sinnvoll im iterativen Prozess regelmäßig Kopien lokaler WorldMaps zu generieren, damit die Robustheit mit jeder Iteration miteinander verglichen werden kann.
 
 
+
 ### 8. Exportieren
 
 Die erstellte WorldMap-Datei kann über die Export-Funktion des Portal Editors [5.3](3.2-app-aufbau.html#worldmap-details) exportiert werden. Aus dem Sharing-Dialog heraus kann diese per Mail oder Airdrop an einen Rechner geschickt werden, wo diese dann auf Contentful hochgeladen und dem entsprechenden Portal hinzugefügt werden kann.
+
 
 
 ### 9. Hinweis-Bild und Hinweis-Text erstellen
