--- a/2.2-cms-struktur.md
+++ b/2.2-cms-struktur.md
@@ -124,6 +124,12 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 - Ausspielungen: [7.7](1.2-spielaufbau.html#portalseite)
 
 ### Container Type: Containertyp
+
+| Self-Contained     | Paper     |
+| :------------- | :------------- |
+| ![Self-contained](/img/pe_self_contained.png)       | Item Two       |
+| Item One       | Item Two       |
+
 - Optionen und korrespondierende Media Dateitypen:
     - Self-contained: erfordert 3D-Datei mit zusätzlicher Vorschau-Bilddatei
     - Paper: erfordert Bilddatei
