--- a/2.2-cms-struktur.md
+++ b/2.2-cms-struktur.md
@@ -127,8 +127,13 @@ Hiervon sollte nur ein singulärer Eintrag als Ausgangspunkt der Datenbank exist
 
 | Self-Contained     | Paper     |
 | :------------- | :------------- |
-| ![Self-contained](/img/pe_self_contained.png)       | Item Two       |
-| Item One       | Item Two       |
+| ![Self-contained](/img/pe_self_contained.png)       | ![Self-contained](/img/pe_self_contained.png)       |
+| Medientyp: 3D-Datei; `.usdz`, `.scn`       | Medientyp: Foto; `.jpg`, `.png`      |
+| Empfohlene Größe: max. 10 MB; darüber hinaus experimentell | Empfohlene Größe: abhängig davon aus welcher Ferne die User/in das Bild betrachten soll; Faustregel sind 4-5 Megapixel pro Bild |
+
+
+Paper:
+Empfohlene Größe: max. 4 Megapixel; mehr ist nicht notwendig auf
 
 - Optionen und korrespondierende Media Dateitypen:
     - Self-contained: erfordert 3D-Datei mit zusätzlicher Vorschau-Bilddatei
